--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,15 @@
 theme: jekyll-theme-cayman
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>meineSeite</title>
+    <meta name="viewport" content="width=device-width">
+    </head>
+ <body>
+    <div id="home">
+     <h1>Startseite</h1>
+     <p>Ich bin die Startseite!</p>
+    </div>
+  </body>
+</html>
